--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "ngmoviedb",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "nodejs ./bin/www"
-  },
-  "dependencies": {
-    "express": "~4.0.0",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
-    "body-parser": "~1.0.0",
-    "debug": "~0.7.4",
-    "jade": "~1.3.0"
-  },
-  "description": "A movie databases for nigerian movies and tv shows. Developed using MEAN.",
-  "main": "app.js",
-  "devDependencies": {},
-  "author": "Abifoluwa Oni",
-  "license": "ISC",
+"name": "ngmoviedb",
+"version": "0.0.1",
+"private": true,
+"scripts": {
+"start": "node ./bin/www"
+},
+"engines": {
+"node": "~4.2.6",
+"npm": "~3.5.6"
+},
+"dependencies": {
+"express": "~4.0.0",
+"body-parser": "~1.0.2",
+"cookie-parser": "~1.0.1",
+"morgan": "~1.0.1",
+"jade": "~1.3.1"
+}
 }
